[project]
name = "api-stress-testing-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "cs4alhaider",email = "cs.alhaider@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
